src/test/deca/context/valid/Class18.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class B{
    boolean b;
}
class A{
    int a;
}

{
    A FIRST=new A();
    B SECOND=new B();
    FIRST.a=100;
    SECOND.b=true;
}