src/test/deca/context/invalid/classmethode24.deca
class A {
    void methode(){
        return true;
    }
}

{
    A a = new A();
    boolean i=a.methode();

}
